[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/Board.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/TileChoice.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/theme.tres" type="Theme" id=4]
[ext_resource path="res://scenes/GameOver.tscn" type="PackedScene" id=5]
[ext_resource path="res://themes/theme_panel_heading.tres" type="Theme" id=6]
[ext_resource path="res://scenes/World.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/GameOptions.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Background.tscn" type="PackedScene" id=9]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.194, 0.2, 0.176, 1 )

[node name="Game" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="UI"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="UI/PanelContainer"]
visible = false
margin_left = 3.0
margin_top = 3.0
margin_right = 1025.0
margin_bottom = 597.0

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 1021.0
margin_bottom = 597.0
custom_constants/margin_right = 30
custom_constants/margin_top = 10
custom_constants/margin_left = 30
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="UI/PanelContainer/MarginContainer"]
margin_left = 30.0
margin_top = 10.0
margin_right = 988.0
margin_bottom = 584.0
mouse_filter = 2

[node name="MarginContainer2" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
margin_right = 150.0
margin_bottom = 574.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2"]
margin_top = 20.0
margin_right = 150.0
margin_bottom = 554.0

[node name="PanelContainer" type="PanelContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_right = 150.0
margin_bottom = 154.0
rect_min_size = Vector2( 150, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 147.0
margin_bottom = 151.0

[node name="Label" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 144.0
margin_bottom = 18.0
theme = ExtResource( 6 )
text = "Stats"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 144.0
margin_bottom = 148.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 134.0
margin_bottom = 116.0
columns = 2

[node name="LabelLevelTitle" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_right = 85.0
margin_bottom = 18.0
text = "Level:"
align = 1

[node name="LabelLevelValue" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 89.0
margin_right = 116.0
margin_bottom = 18.0
text = "1"
align = 1

[node name="LabelTilesAliveThresholdTitle" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 22.0
margin_right = 85.0
margin_bottom = 40.0
text = "Threshold (%):"
align = 1

[node name="LabelTilesAliveThreshold" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 89.0
margin_top = 22.0
margin_right = 116.0
margin_bottom = 40.0
text = "50"
align = 1

[node name="LabelTilesPlacedTitle" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 44.0
margin_right = 85.0
margin_bottom = 62.0
text = "Tiles Placed:"
align = 1

[node name="LabelTilesPlaced" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 89.0
margin_top = 44.0
margin_right = 116.0
margin_bottom = 62.0
text = "16"
align = 1

[node name="LabelTilesAliveTitle" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 66.0
margin_right = 85.0
margin_bottom = 84.0
text = "Tiles Alive:"
align = 1

[node name="LabelTilesAlive" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 89.0
margin_top = 66.0
margin_right = 116.0
margin_bottom = 84.0
text = "10"
align = 1

[node name="LabelTilesAlivePercentTitle" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_top = 88.0
margin_right = 85.0
margin_bottom = 106.0
text = "Tiles Alive (%):"
align = 1

[node name="LabelTilesAlivePercent" type="Label" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/PanelContainer/VBoxContainer/MarginContainer/GridContainer"]
margin_left = 89.0
margin_top = 88.0
margin_right = 116.0
margin_bottom = 106.0
text = "62.5"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer"]
margin_top = 158.0
margin_right = 150.0
margin_bottom = 198.0
custom_constants/margin_bottom = 40

[node name="TileChoice" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 202.0
margin_right = 150.0
margin_bottom = 526.0
rect_min_size = Vector2( 150, 0 )
mouse_filter = 2

[node name="CenterContainer2" type="CenterContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 154.0
margin_right = 794.0
margin_bottom = 574.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2"]
visible = false
margin_left = 40.0
margin_top = 7.0
margin_right = 600.0
margin_bottom = 567.0
rect_min_size = Vector2( 560, 560 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardContainer" type="PanelContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2"]
margin_left = 40.0
margin_top = 7.0
margin_right = 600.0
margin_bottom = 567.0
rect_min_size = Vector2( 560, 560 )
custom_styles/panel = SubResource( 1 )

[node name="Background" parent="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2/BoardContainer" instance=ExtResource( 9 )]

[node name="PanelComets" type="Panel" parent="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2/BoardContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 560.0
margin_bottom = 560.0
rect_clip_content = true

[node name="Board" type="Node2D" parent="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2/BoardContainer"]
script = ExtResource( 1 )

[node name="ButtonBoard" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
margin_left = 144.0
margin_right = 1028.0
margin_bottom = 600.0
rect_min_size = Vector2( 884, 600 )
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer"]
margin_left = 798.0
margin_right = 958.0
margin_bottom = 574.0
custom_constants/margin_top = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer"]
margin_top = 20.0
margin_right = 160.0
margin_bottom = 554.0

[node name="ButtonOptions" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_vertical = 0
text = "Options"

[node name="MarginContainer" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 160.0
margin_bottom = 183.0
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 187.0
margin_right = 160.0
margin_bottom = 347.0
rect_min_size = Vector2( 160, 160 )

[node name="World" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/Panel" instance=ExtResource( 7 )]

[node name="MarginContainer2" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 351.0
margin_right = 160.0
margin_bottom = 500.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer3" type="MarginContainer" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 160.0
margin_bottom = 534.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonProceed" type="Button" parent="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer3"]
visible = false
margin_right = 160.0
margin_bottom = 30.0
rect_min_size = Vector2( 100, 30 )
size_flags_vertical = 0
text = "Proceed"

[node name="ContGameOver" parent="." instance=ExtResource( 5 )]
visible = false

[node name="ContGameOptions" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="tile_selected" from="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer2/VBoxContainer/TileChoice" to="." method="_on_TileChoice_tile_selected"]
[connection signal="mouse_entered" from="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2/BoardContainer" to="." method="_on_BoardContainer_mouse_entered"]
[connection signal="mouse_exited" from="UI/PanelContainer/MarginContainer/HBoxContainer/CenterContainer2/BoardContainer" to="." method="_on_BoardContainer_mouse_exited"]
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/HBoxContainer/ButtonBoard" to="." method="_on_ButtonBoard_pressed"]
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/ButtonOptions" to="." method="_on_ButtonOptions_pressed"]
[connection signal="pressed" from="UI/PanelContainer/MarginContainer/HBoxContainer/MarginContainer/VBoxContainer/MarginContainer3/ButtonProceed" to="." method="_on_ButtonProceed_pressed"]
[connection signal="show_map" from="ContGameOver" to="." method="_on_ContGameOver_show_map"]
[connection signal="done" from="ContGameOptions" to="." method="_on_ContGameOptions_done"]
